<resources>
    <string name="app_name">WMSApp</string>
    <string name="socketTimeout">连接超时</string>
    <string name="socketException">连接不到服务器</string>
    <string name="httpLinkFailed">连接失败请重新连接</string>
    <string name="accountNotIsEmpty">账号不能为空</string>
    <string name="passwordNotIsEmpty">密码不能为空</string>
    <string name="allFunction">全部功能</string>
    <string name="name">名称</string>
    <string name="sku">编号</string>
    <string name="take_delivery">收货</string>
    <string name="unit">单位</string>
    <string name="batch_no">批次号</string>
    <string name="take_delivery_qty">入库数量</string>
    <string name="depot_id">仓库ID</string>
    <string name="depot_name">仓库名称</string>
    <string name="user_detail">个人</string>
    <string name="depot_change"><![CDATA[仓库选择>>]]></string>
    <string name="please_change_depot">请选择仓库</string>
    <string name="change_service_ip">服务器地址</string>
    <string name="depot_in_operate">入库操作</string>
    <string name="depot_out_operate">出库操作</string>
    <string name="deport_on_operate">库内操作</string>
    <string name="take_delivery_title">收货</string>
    <string name="scanning_code">扫一扫</string>
    <string name="please_input_account">请输入账号</string>
    <string name="please_input_password">请输入密码</string>
    <string name="change_ip_title">修改ip</string>
    <string name="please_input_ip">请输入ip</string>
    <string name="please_input_port">请输入端口号</string>
    <string name="port">端口号:</string>
    <string name="yes">确认</string>
    <string name="change_deport_title">请选择仓库</string>
    <string name="standard">规格</string>
    <string name="rackName">货位名称</string>
    <string name="rackNumber">货位号</string>
    <string name="quantity">数量</string>
    <string name="rackLocation">货位位置</string>
    <string name="goods_sku">SKU</string>
    <string name="plan_qty">计划数量</string>
    <string name="over_qty">完成数量</string>
    <string name="depot_have_qty">库存剩余</string>
    <string name="goodsClassNo">大类编码</string>
    <string name="rackCode">货位编码</string>
    <string name="goodsOwner">货主</string>
    <string name="please_input_rack">请输入货位</string>
    <string name="please_input_manifest">请输入任务单据号</string>
    <string name="not_manifest">没有任务单</string>
    <string name="not_more_manifest">没有更多任务单</string>
    <string name="noGoodsOfManifest">当前任务单中无货品</string>
    <string name="matching">进行匹配中</string>
    <string name="operateManifest">操作任务单</string>
    <string name="DoneByGoods">该货品已经全部操作完毕</string>
    <string name="noGoosOfManifest">当前任务单中不包含该货品</string>
    <string name="bosSubmitSuccess">箱子提交成功</string>
    <string name="noHaveGoodsFromBoxOfManifest">箱子没有所要存放的货品</string>
    <string name="operateQty">操作数量</string>
    <string name="srcManifest">来源订单</string>
</resources>
