<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/titleView"
    android:background="@color/colorBlue"
    android:orientation="vertical"
    android:paddingBottom="@dimen/margin_normal"
    android:paddingTop="@dimen/margin_normal">

    <com.shqtn.base.widget.LabelTextView
        android:id="@+id/item_goods_sorting_ltv_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/x8"
        android:layout_marginRight="@dimen/x8"
        android:layout_marginTop="@dimen/x4"
        android:paddingBottom="@dimen/x6"
        android:paddingLeft="@dimen/x8"
        android:paddingRight="@dimen/x8"
        android:paddingTop="@dimen/x6"
        app:color="@color/text_white_color"
        app:labelText="@string/name"
        app:size="@dimen/text_label_size" />

    <com.shqtn.base.widget.LabelTextView
        android:id="@+id/item_goods_sorting_ltv_sku"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/x8"
        android:layout_marginRight="@dimen/x8"
        android:layout_marginTop="@dimen/x2"
        android:paddingLeft="@dimen/x8"
        android:paddingRight="@dimen/x8"
        android:paddingTop="@dimen/x6"
        app:color="@color/text_white_color"
        app:labelText="@string/sku"
        app:size="@dimen/text_label_size" />

    <com.shqtn.base.widget.LabelTextView
        android:id="@+id/item_goods_sorting_ltv_batch_no"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/x8"
        android:layout_marginRight="@dimen/x8"
        android:paddingLeft="@dimen/x8"
        android:paddingRight="@dimen/x8"
        android:paddingTop="@dimen/x4"
        app:color="@color/text_white_color"
        app:labelText="@string/batch_no"
        app:size="@dimen/text_label_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.shqtn.base.widget.LabelTextView
            android:id="@+id/item_goods_sorting_ltv_std"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/x8"
            android:layout_weight="1"
            android:paddingLeft="@dimen/x8"
            android:paddingRight="@dimen/x8"
            android:paddingTop="@dimen/x4"
            app:color="@color/text_white_color"
            app:labelText="@string/standard"
            app:size="@dimen/text_label_size" />

        <com.shqtn.base.widget.LabelTextView
            android:id="@+id/item_goods_sorting_ltv_depot_have_qty"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/x8"
            android:layout_weight="1"
            android:paddingLeft="@dimen/x8"
            android:paddingRight="@dimen/x8"
            android:paddingTop="@dimen/x4"
            app:color="@color/text_white_color"
            app:labelText="@string/depot_have_qty"
            app:size="@dimen/text_label_size" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.shqtn.base.widget.LabelTextView
            android:id="@+id/item_goods_sorting_ltv_over_qty"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/x8"
            android:layout_weight="1"
            android:paddingLeft="@dimen/x8"
            android:paddingRight="@dimen/x8"
            android:paddingTop="@dimen/x4"
            app:color="@color/text_white_color"
            app:labelText="@string/over_qty"
            app:size="@dimen/text_label_size" />

        <com.shqtn.base.widget.LabelTextView
            android:id="@+id/item_goods_sorting_ltv_plan_qty"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/x8"
            android:layout_weight="1"
            android:paddingLeft="@dimen/x8"
            android:paddingRight="@dimen/x8"
            android:paddingTop="@dimen/x4"
            app:color="@color/text_white_color"
            app:labelText="@string/plan_qty"
            app:size="@dimen/text_label_size" />

    </LinearLayout>


</LinearLayout>