<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.shqtn.base.widget.TitleView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/home_titleView"
        android:layout_width="match_parent"
        app:showRightIcon="false"
        android:layout_height="38dp"
        app:hideBackIcon="true"
        app:title="@string/allFunction" />

    <ScrollView
        android:background="@drawable/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/frag_home_depot_enter_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <TextView
                    style="@style/home_item_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/home_title_bg_color"
                    android:text="@string/depot_in_operate" />


                <android.support.v7.widget.RecyclerView
                    android:id="@+id/frag_home_depot_enter_recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/frag_home_depot_exit_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <TextView
                    style="@style/home_item_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/home_title_bg_color"
                    android:text="@string/depot_out_operate" />


                <android.support.v7.widget.RecyclerView
                    android:id="@+id/frag_home_depot_exit_recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/frag_home_depot_in_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/home_item_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/home_title_bg_color"
                    android:text="@string/deport_on_operate" />


                <android.support.v7.widget.RecyclerView
                    android:id="@+id/frag_home_depot_in_recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>