<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipChildren="true"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".activity.DepotChangeAty">

    <com.shqtn.base.widget.TitleView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/titleView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/titleHeight"
        app:title="@string/change_deport_title" />


    <com.shqtn.base.widget.SystemEditText
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="4dp"
        android:id="@+id/depot_change_set_input_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:background="@drawable/shape_depot_item_div"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:layout_marginLeft="@dimen/margin_normal"
        android:layout_marginRight="@dimen/margin_normal"
        android:layout_marginTop="@dimen/margin_top_normal"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/depot_id"
            android:textColor="@color/text_color_blue"
            android:textSize="12sp" />

        <View
            android:layout_width="@dimen/x1"
            android:layout_height="match_parent"
            android:background="@color/div_color" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/depot_name"
            android:textColor="@color/text_color_blue"
            android:textSize="12sp" />
    </LinearLayout>

    <com.handmark.pulltorefresh.library.PullToRefreshListView
        android:id="@+id/depot_change_listView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_normal"
        android:layout_marginRight="@dimen/margin_normal"
        android:divider="#00000000" />

</LinearLayout>
